--- a/src/index.scss
+++ b/src/index.scss
@@ -130,5 +130,40 @@ body {
 				}
 			}
 		}
+		.selectPlanForm {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 2rem;
+			height: 55%;
+			margin-top: 1rem;
+			.card {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-evenly;
+				align-items: flex-start;
+				height: 65%;
+				width: 100%;
+				padding: 1rem;
+				border: 1px solid $Coolgray;
+				border-radius: 5px;
+				cursor: pointer;
+				h2 {
+					color: $Marineblue;
+					font-size: 20px;
+				}
+				p {
+					color: $Coolgray;
+					font-size: 14px;
+				}
+				&:hover {
+					border: 2px solid $Purplishblue;
+				}
+				&.active {
+					background-color: $Magnolia;
+					border: 2px solid $Purplishblue;
+				}
+			}
+		}
 	}
 }
