--- a/src/index.scss
+++ b/src/index.scss
@@ -164,6 +164,12 @@ body {
 					border: 2px solid $Purplishblue;
 				}
 			}
+			.lowerCheckbox {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 100%;
+			}
 		}
 	}
 }
