--- a/src/index.scss
+++ b/src/index.scss
@@ -112,22 +112,24 @@ body {
 						border: 2px solid $Purplishblue;
 					}
 				}
-				.lowerButtons {
-					display: flex;
-					justify-content: flex-end;
-					width: 100%;
-					button {
-						width: 20%;
-						height: 5vh;
-						background-color: $Marineblue;
-						color: $White;
-						font-weight: 700;
-						cursor: pointer;
-						border-radius: 7px;
-						border: none;
-						outline: none;
-					}
-				}
+			}
+		}
+		.lowerButtons {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 100%;
+			margin-top: 5rem;
+			.nextStp {
+				width: 20%;
+				height: 5vh;
+				background-color: $Marineblue;
+				color: $White;
+				font-weight: 700;
+				cursor: pointer;
+				border-radius: 7px;
+				border: none;
+				outline: none;
 			}
 		}
 		.selectPlanForm {
@@ -164,11 +166,19 @@ body {
 					border: 2px solid $Purplishblue;
 				}
 			}
-			.lowerCheckbox {
+		}
+		.lowerCheckbox {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			height: 13%;
+			border-radius: 10px;
+			gap: 2rem;
+			background-color: $Magnolia;
+			label {
 				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 100%;
+				gap: 2rem;
 			}
 		}
 	}
