--- a/src/index.scss
+++ b/src/index.scss
@@ -175,6 +175,47 @@ body {
 			height: 13%;
 			border-radius: 10px;
 			background-color: $Magnolia;
+			gap: 1rem;
 		}
+	}
+	label {
+		position: relative;
+		display: inline-block;
+		width: 45px;
+		height: 20px;
+		input {
+			opacity: 0;
+			width: 0;
+			height: 0;
+		}
+	}
+
+	span {
+		position: absolute;
+		cursor: pointer;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: $Marineblue;
+		transition: 0.3s;
+		border-radius: 30px;
+		&::before {
+			position: absolute;
+			content: "";
+			height: 14px;
+			width: 14px;
+			left: 3px;
+			bottom: 2.6px;
+			background-color: #fff;
+			border-radius: 50%;
+			transition: 0.3s;
+		}
+	}
+	input:checked + span + .yearly {
+		background-color: $Marineblue;
+	}
+	input:checked + span:before {
+		transform: translateX(23px);
 	}
 }
