--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Alata&family=Barlow&family=Barlow+Condensed&family=Bellefair&family=Inter:wght@400;700&family=Josefin+Sans:wght@300;400;700&family=Kumbh+Sans:wght@400;700&family=Rubik:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
 * {
-	font-family: "Rubik", sans-serif;
+	font-family: "Ubuntu", sans-serif;
 }
