--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @forward "./assets/scss/base/reset";
+@forward "./assets/scss/base/typography";
 @use "./assets/scss/abstracts/color" as *;
 body {
 	width: 100%;
@@ -120,6 +121,14 @@ body {
 			justify-content: space-between;
 			width: 100%;
 			margin-top: 5rem;
+			.prevStp {
+				background-color: $White;
+				border: none;
+				outline: none;
+				cursor: pointer;
+				font-weight: 700;
+				color: $Coolgray;
+			}
 			.nextStp {
 				width: 20%;
 				height: 5vh;
@@ -157,6 +166,11 @@ body {
 				p {
 					color: $Coolgray;
 					font-size: 14px;
+				}
+				span {
+					color: $Marineblue;
+					font-weight: 700;
+					font-size: 13px;
 				}
 				&:hover {
 					border: 2px solid $Purplishblue;
@@ -217,5 +231,106 @@ body {
 	}
 	input:checked + .checkSpan:before {
 		transform: translateX(23px);
+	}
+	.addonsWrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin-top: 1rem;
+		.formAddons {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			width: 100%;
+			gap: 2rem;
+			.addons {
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				justify-content: space-between;
+				width: 90%;
+				height: 9vh;
+				border: 1px solid gray;
+				padding: 2rem;
+				&.checked {
+					border: 2px solid $Purplishblue;
+					border-radius: 10px;
+				}
+				.addonContent {
+					display: flex;
+					flex-direction: column;
+					align-items: flex-start;
+					width: 65%;
+					h3 {
+						color: $Marineblue;
+					}
+					p {
+						color: $Coolgray;
+					}
+				}
+				span {
+					color: $Purplishblue;
+				}
+			}
+		}
+		.checkboxAddons input[type="checkbox"] {
+			-webkit-appearance: none;
+			appearance: none;
+			width: 1.6em;
+			height: 1.6em;
+			border-radius: 0.15em;
+			margin-right: 0.5em;
+			border: 1px solid $Coolgray;
+			outline: none;
+			cursor: pointer;
+		}
+		input.checked {
+			background-color: $Purplishblue;
+			position: relative;
+			&::before {
+				content: "\2713";
+				font-size: 15px;
+				color: #fff;
+				position: absolute;
+				right: 4px;
+				top: -2px;
+			}
+		}
+	}
+	.finishContent {
+		background-color: $Magnolia;
+		width: 100%;
+		height: 50%;
+		padding: 0.5rem 1rem;
+		margin-top: 2rem;
+		.topfinishContent {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 100%;
+			margin-top: 2rem;
+			h3 {
+				&::first-letter {
+					text-transform: uppercase;
+				}
+				color: $Marineblue;
+				span {
+					font-size: 15px;
+					font-weight: 400;
+				}
+			}
+		}
+		.services {
+			display: flex;
+			flex-direction: column;
+			gap: 1rem;
+			margin-top: 2rem;
+			p {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+			}
+		}
 	}
 }
