--- a/src/index.scss
+++ b/src/index.scss
@@ -140,6 +140,17 @@ body {
 				border: none;
 				outline: none;
 			}
+			.confirm {
+				width: 20%;
+				height: 5vh;
+				background-color: $Purplishblue;
+				color: $White;
+				font-weight: 700;
+				cursor: pointer;
+				border-radius: 7px;
+				border: none;
+				outline: none;
+			}
 		}
 		.selectPlanForm {
 			display: flex;
@@ -298,38 +309,61 @@ body {
 			}
 		}
 	}
-	.finishContent {
-		background-color: $Magnolia;
-		width: 100%;
-		height: 50%;
-		padding: 0.5rem 1rem;
-		margin-top: 2rem;
-		.topfinishContent {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			width: 100%;
-			margin-top: 2rem;
-			h3 {
-				&::first-letter {
-					text-transform: uppercase;
-				}
+	.finshWrapper {
+		.price {
+			color: $Marineblue;
+			font-weight: 700;
+		}
+		p {
+			color: $Coolgray;
+			span {
 				color: $Marineblue;
-				span {
-					font-size: 15px;
-					font-weight: 400;
-				}
+				font-weight: 700;
 			}
 		}
-		.services {
-			display: flex;
-			flex-direction: column;
-			gap: 1rem;
+		.finishContent {
+			background-color: $Magnolia;
+			width: 100%;
+			height: 50%;
+			padding: 0.5rem 1rem;
 			margin-top: 2rem;
-			p {
+			.topfinishContent {
 				display: flex;
 				align-items: center;
 				justify-content: space-between;
+				width: 100%;
+				margin-top: 2rem;
+				h3 {
+					&::first-letter {
+						text-transform: uppercase;
+					}
+					color: $Marineblue;
+					span {
+						font-size: 15px;
+						font-weight: 400;
+					}
+				}
+			}
+			.services {
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+				margin-top: 2rem;
+				p {
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+				}
+			}
+		}
+		.bottomFinishContent {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			padding: 1rem;
+			.totalPrice {
+				color: $Purplishblue;
+				font-weight: 700;
 			}
 		}
 	}
