--- a/src/index.scss
+++ b/src/index.scss
@@ -367,4 +367,18 @@ body {
 			}
 		}
 	}
+	.final {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-evenly;
+		width: 100%;
+		height: 75%;
+		.finalContent {
+			text-align: center;
+			h1 {
+				margin-bottom: 1rem;
+			}
+		}
+	}
 }
